--- a/static/style.css
+++ b/static/style.css
@@ -4,39 +4,24 @@
     box-sizing: border-box;
 }
 
-.container{
-    min-height: 100vh;
-    width: 100vw;
-    padding: 23px;
-    background-color: #f5f5f5;
-}
-
-.header-title{
-    display: flex;
-    align-items: center;
-    padding: 10px;
+header {
+    padding: 30px 0;
     background-color: rgb(34, 53, 99);
     text-align: center;
     font-size: 30px;
-}
-
-
-.header-title :nth-child(1){
-    color:#000000;
-    margin-top: 30px;
-    margin-left: 450px;
-    margin-bottom: 30px;
     font-family: monospace;
 }
 
-
-#input-box{
+#main{
+    margin: 30px;
+    background-color: #f5f5f5;
     border: 1px solid black;
-    padding: 23px;
+    padding: 30px;
+    padding-bottom: 70px;
     background-color: rgb(216, 222, 243)
 }
 
-input, textarea{
+textarea{
     width: 100%;
     background-color: rgb(216, 222, 243);
     border: none;
@@ -46,7 +31,8 @@ input, textarea{
     font-size: 17px;
 }
 
-button{
+.bottom-button {
+    float: left;
     background: rgb(157, 168, 202);
     color: rgb(37, 49, 94);
     padding: 8px 12px;
@@ -58,4 +44,3 @@ button{
     width: 100px;
     height: 40px;
 }
-
